--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
 		"bin-debug/GameWebSocket.js",
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
-		"bin-debug/Platform.js"
+		"bin-debug/Platform.js",
+		"bin-debug/XXTea.js"
 	]
 }
